# mysql-python

./: .gitignore  CMakeLists.txt  LICENSE  readme.md
api/: mysql-python.h
src/: mysql-python.cpp
